# MyPad

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/context_menu/: mod.rs
src/editor/: mod.rs
src/filesystem/: mod.rs
src/markdown/: mod.rs
src/syntax/: mod.rs
src/ui/: mod.rs
